Transfer Order integrated

--- a/ShahWilayat/Views/Transfer/Index.cshtml
+++ b/ShahWilayat/Views/Transfer/Index.cshtml
@@ -278,6 +278,164 @@
 
 @*Edit Modal Start*@
 
+@*Edit Modal Transfer Order Start*@
+<div class="modal fade text-left" id="TransferOrder" role="dialog" aria-labelledby="myModalLabel16" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel16">Edit Transfer</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="PrintTransferOrder" class="reveal">
+                    <table style="width: 100%; height:100%; color: black;">
+                        <thead>
+                            <tr>
+                                <img src="~/Content/assets/css/PrintMaterial/TransferOrder/Top-img.png" style="width:100%;">
+
+                            </tr>
+
+                        </thead>
+                        <tbody style="height: 100%;">
+                            <tr style="height:60px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="2" align="center">
+
+                                    <span style="font-size:24px;font-weight:600;line-height:0;text-align:center;border-bottom: 2px solid #000;">TRANSFER ORDER</span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>Name of Transferee: </label><span><b><u>Qamar Un Nisa </u></b></span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>S/o, D/o, W/o: </label><span><b><u>Firasat Ali Siddiqui</u></b></span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>National Identity Card No:</label><span><b><u>42201-4327962-2</u></b></span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>Address: </label><span>
+                                        <b>
+                                            <u>
+                                                House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.
+                                            </u>
+                                        </b>
+                                    </span>
+                                </td>
+                                <td style="width: 5%;"></td>
+                            </tr>
+                            <tr style="line-height:20px;">
+                                <td style="width:15%;"></td>
+                                <td colspan="3">
+                                    <label>Plot No:</label>&nbsp;&nbsp;<span><b><u>R-258 </u></b></span>
+                                    <label>Sector No.</label>&nbsp;&nbsp;<span><b><u>49-A </u></b></span>
+                                    <label>Area:</label>&nbsp;&nbsp;<span><b><u>120</u></b></span>&nbsp;&nbsp;Sq. Yds.
+                                </td>
+                                <td style="width: 5%;"></td>
+                            </tr>
+
+                            <tr><td><br></td></tr>
+                            <tr>
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <p style="line-height:1;font-size:17px;">
+                                        Dear Sir/Madam,
+                                    </p>
+                                    <p style="line-height:1.3;font-size:18px;text-align:justify;">
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With the approval of the Managing Committee meeting of Shah Wilayat
+                                        Cooperative Housing Society Ltd., Karachi held on <span><b><u>04-05-2019</u></b>, the Society has been pleased to transfer the occupancy rights of the above plot in your name by the way of Sale Agreement, dated <span><b><u>10-04-2019</u></b>, in heritance on the same terms and conditions on which the plot was originally allotted. Your Membership no.will be <span><b><u>SWC/166/06</u></b>.
+                                    </p>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+                            <tr><td><br></td></tr>
+                            <tr>
+                                <td style="width: 15%;"></td>
+                                <td><img src="~/Content/assets/css/PrintMaterial/TransferOrder/user.jpg" style="width:130px; height:170px;"></td>
+                                <td style="text-align: center;padding-top:50px;">
+                                    <span style="margin-right: 50px;">_______________</span>
+                                    <span>_____________________</span> <br>
+                                    <span style="font-size:14px;margin-left:20px;">Hon. Secretary</span>
+                                    <span style="font-size:14px; margin-left:70px;">Member Managing Committee</span>
+                                    <p style="font-size:17px;text-align: left; margin-left: 30px;">
+                                        Shah Wilayat Cooperative Housing Society Ltd.
+                                        <br>KARACHI.
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr><td><br></td></tr>
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>CC To: </label>&nbsp;&nbsp;<span><b><u>Sadaf Syed</u></b></span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>CNIC # :</label>&nbsp;&nbsp;<span><b><u>43828-8281278-3</u></b></span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+                            <tr style="line-height:20px;">
+                                <td style="width: 15%;"></td>
+                                <td colspan="3">
+                                    <label>Address:</label>&nbsp;&nbsp;<span>
+                                        <b>
+                                            <u>
+                                                House # L-3021, Gulshan-e- Iqbal,
+                                                <br> Block 2,Metrovill III, Karachi
+                                            </u>
+                                        </b>
+                                    </span>
+                                </td>
+                                <td style="width:5%;"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <table>
+                        <tbody>
+                            <tr>
+
+                                <img src='~/Content/assets/css/PrintMaterial/TransferOrder/Bottom-img.png' style="width:100%;" />
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-dark btnUpdateChanges">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@*Edit Modal Start*@
+
 @section Scripts
 {
     <script type="text/x-jQuery-tmpl" id="TransferListing">
@@ -301,10 +459,11 @@
             <td class="project-title tdMember" nowrap>${Member}</td>
             <td class="project-title tdPlot" nowrap>${Plot}</td>
             <td class="project-title tdTransferDate" nowrap>${ToJavaScriptDate(TransferDate)}</td>
-          
+
 
 
             <td class="project-title" nowrap>
+                <a href="javascript:void(0)"  onclick="PrintTransferOrder()" data-toggle="tooltip" data-placement="top" data-original-title="Print Transfer Order"><i class="la la-exchange primary"></i></a> &nbsp;
 
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditTransfer" onclick="EditTransfer(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Transfer"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditTransfer(this)" title="Edit Attachment"><i class="ft-paperclip"></i></a>
