--- a/ShahWilayat/Views/MembershipSingle/Index.cshtml
+++ b/ShahWilayat/Views/MembershipSingle/Index.cshtml
@@ -224,7 +224,7 @@
 
             <td class="project-title" nowrap>
 
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#PrintMember" onclick="PrintIndividualMember(this)" title="Print Profile"><i class="la la-user warning"></i></a>
+                <a href="javascript:void(0)"  onclick="PrintMembershipSingle();" title="Membership Single"><i class="la la-user warning"></i></a>
             </td>
 
 
