--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -850,28 +850,28 @@
                                         <img src="~/Content/assets/css/PrintMaterial/ID_Front.png" style="height:204px; width:323.52px;border:2px solid #000;">
                                         <img src="~/Content/assets/css/PrintMaterial/ID_Back.png" style="height:204px; width:323.52px;border:2px solid #000;">
                                         <div class="MembershipNo">
-                                            <span><b>SWC/254/06</b></span>
+                                            <span><b class="IDCardMembershipNo"></b></span>
                                         </div>
                                         <div class="MemberImage">
-                                            <img src="~/Uploads/Musab Yahiya_20190123163602_20190725020850.jpg" style="width:75px; height: 97px;">
+                                            <img src="" class="IDCardProfile" style="width:75px; height: 97px;">
                                         </div>
                                         <div class="MemberName">
                                             <span><b>Muhammad Fahad</b></span>
                                         </div>
                                         <div class="MemberAddress">
-                                            <span> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                            <span class="IDCardAddress"></span>
                                         </div>
                                         <div class="MemberCNIC">
-                                            <span>42101-5762826-3</span>
+                                            <span class="IDCardCNIC"></span>
                                         </div>
                                         <div class="MemberBloodGroup">
-                                            <span><b>A+</b></span>
+                                            <span><b class="IDCardBloodGroup"></b></span>
                                         </div>
                                         <div class="MemberMobile">
-                                            <span>0343-2101016</span>
+                                            <span class="IDCardCellNo"></span>
                                         </div>
                                         <div class="ValidityDate">
-                                            <span>021-34423977</span>
+                                            <span class="IDCardExpiryDate"></span>
                                         </div>
                                     </td>
                                 </tr>
@@ -945,7 +945,7 @@
                 <div class="badge badge-success badge-pill">Active</div>
             </td>
             <td class="project-title" nowrap>
-                <a href="javascript:void(0)" onclick="PrintIDCard()" data-toggle="tooltip" title="ID Card"><i class="la la-credit-card primary"></i></a>
+                <a href="javascript:void(0)" onclick="PrintIDCard(this)" data-toggle="tooltip" title="ID Card"><i class="la la-credit-card primary"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#PrintMember" onclick="PrintIndividualMember(this)" data-toggle="tooltip" title="Print Profile"><i class="la la-user warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Attachment"><i class="ft-paperclip"></i></a>
