--- a/ShahWilayat/Views/AssociateMember/Index.cshtml
+++ b/ShahWilayat/Views/AssociateMember/Index.cshtml
@@ -540,7 +540,67 @@
     </div>
 </div>
 @*Delete Modal Start*@
+@*Print ID Card Modal Start*@
+<div class="modal fade text-left" id="PrintIDCard" role="dialog" aria-labelledby="myModalLabel16" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel16">Membership Profile</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-body frmMember">
+                    <div id="IDCard">
+                        <div class="container">
+                            <table>
+                                <tr>
+                                <tr>
+                                    <td>
+                                        <img src="~/Content/assets/css/PrintMaterial/ID_Front.png" style="height:204px; width:323.52px;border:2px solid #000;">
+                                        <img src="~/Content/assets/css/PrintMaterial/ID_Back.png" style="height:204px; width:323.52px;border:2px solid #000;">
+                                        <div class="MembershipNo">
+                                            <span><b class="IDCardMembershipNo"></b></span>
+                                        </div>
+                                        <div class="MemberImage">
+                                            <img src="" class="IDCardProfile" style="width:75px; height: 97px;">
+                                        </div>
+                                        <div class="MemberName">
+                                            <span><b>Muhammad Fahad</b></span>
+                                        </div>
+                                        <div class="MemberAddress">
+                                            <span class="IDCardAddress"></span>
+                                        </div>
+                                        <div class="MemberCNIC">
+                                            <span class="IDCardCNIC"></span>
+                                        </div>
+                                        <div class="MemberBloodGroup">
+                                            <span><b class="IDCardBloodGroup"></b></span>
+                                        </div>
+                                        <div class="MemberMobile">
+                                            <span class="IDCardCellNo"></span>
+                                        </div>
+                                        <div class="ValidityDate">
+                                            <span class="IDCardExpiryDate"></span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
 
+                    </div>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-warning btnPrintIDCard">Print</button>
+            </div>
+        </div>
+    </div>
+</div>
+@*Print ID Card Modal Start*@
 @section Scripts
 {
     <script type="text/x-jQuery-tmpl" id="MemberListing">
@@ -584,6 +644,7 @@
                 <div class="badge badge-success badge-pill ">Active</div>
             </td>
             <td class="project-title">
+                <a href="javascript:void(0)" onclick="PrintIDCard(this)" data-toggle="tooltip" title="ID Card"><i class="la la-credit-card primary"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Attachment"><i class="ft-paperclip"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Member"><i class="la la-trash danger"></i></a>
