Done with Payment & Society Payment.

--- a/ShahWilayat/Views/ManualPayment/Index.cshtml
+++ b/ShahWilayat/Views/ManualPayment/Index.cshtml
@@ -98,11 +98,17 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="txtRemarks">Remarks</label>
-                                <textarea class="form-control txtRemarks notrequired" rows="2" placeholder="Enter your remarks"></textarea>
-
+                                <label for="ddlManagementCommittee">Created By</label>
+                                <select class="form-control ddlManagementCommittee"></select>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="txtRemarks">Remarks</label>
+                                <textarea class="form-control txtRemarks notrequired" rows="2" placeholder="Enter your remarks"></textarea>
+                            </div>
+                        </div>
+                       
                     </div>
 
                 </div>
