--- a/ShahWilayat/Views/Payment/Index.cshtml
+++ b/ShahWilayat/Views/Payment/Index.cshtml
@@ -96,6 +96,12 @@
                                 
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="ddlManagementCommittee">Created By</label>
+                                <select class="form-control ddlManagementCommittee"></select>
+                            </div>
+                        </div>
                     </div>
 
 
