--- a/ShahWilayat/Views/Shared/_MasterPage.cshtml
+++ b/ShahWilayat/Views/Shared/_MasterPage.cshtml
@@ -30,6 +30,8 @@
 
     @Styles.Render("~/Content/FileUpload")
 
+    @Styles.Render("~/Content/DevExpress")
+
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
     <style>
         #cover-spin {
@@ -130,6 +132,8 @@
 
     @Scripts.Render("~/bundles/FileUpload")
 
+    <!-- DevExpress -->
+    @Scripts.Render("~/bundles/DevExpress")
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/assets/js/PagesJS/Constant.js"></script>
     <script src="~/Scripts/assets/js/PagesJS/Nav.js"></script>
